compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_duplicate_variant_constructor.snap
---
source: tests/fixtures.rs
assertion_line: 1275
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/duplicate_variant_constructor.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × duplicate variant constructor
   ╭─[tests/fixtures/diagnostics/types/duplicate_variant_constructor.ml:1:30]
 1 │ type token = Ident(String) | Ident(i64)
   ·                              ──┬──
   ·                                ╰── this constructor name is already declared in this module
 2 │ 
   ╰────
  help: choose a unique constructor name; constructors share a module
        namespace
